[tool.poetry]
name = "runsolver"
version = "3.4.0"
description = ""
authors = ["Rakha Kanz Kautsar <rkkautsar@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^2.7,3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
